# mini-canva

./: .gitignore  README.md  WRITEUP.md  demo.py  main.py  pyproject.toml  server.py
engine/: __init__.py  canvas.py  renderer.py  types.py
env/: __init__.py  interaction.py  market_canvas_env.py  spaces.py  wrappers.py
rewards/: __init__.py  accessibility.py  aesthetics.py  calculator.py  constraints.py  prompts.py
specs/: BONUS_LOW_LEVEL_TOOLS_DESIGN.md  BONUS_VISUAL_STATE_RESEARCH.md  CANVAS_ENGINE_SPEC.md  DESIGN_01_CANVAS_ARCHITECTURE.md  DESIGN_02_RL_ENVIRONMENT.md  DESIGN_03_SYSTEM_ARCHITECTURE.md  MCP_AND_DEMO_SPEC.md  REQS.md  REWARD_AND_ENV_SPEC.md  SESSION_EXPORT.md
tests/: test_demo.py  test_engine.py  test_env.py  test_mcp.py  test_rewards.py
